Stickman services 1/css/styles.css
::-webkit-scrollbar {
    width: 4px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: transparent;
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #8cb654d8;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #8cb654;
  }

html{
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    overflow-x: hidden;
}

*{
    box-sizing: border-box;
}


ul{
    display: flex;
    float:left;
}
li{
    list-style: none;
}

/* -----------------HEADER---------------- */

header{
    background: #001e57;
}

#header-description{
    margin: 0;
    padding-right: 15px;
    position: relative!important;
    z-index: 2;
    display: flex;
    align-items: center;
}
.head-title{
    position: absolute;
    margin: 0;
    font-weight: lighter;
    z-index: 2;
}

#header-description::before{
    content: "";
    position: absolute;
    width: 200%;
    height: 60px;
    background: #031331;
    right: 0;
    top: -22px;
    
}
.fa-phone::before{
    color: #8cb654;
}
.fa-envelope-open::before{
    color: #8cb654;
}


.top-header{
    height: 60px;
    color: white;
    align-items: center;
    display: flex;
    justify-content: space-between;
}

/* ---------NAVBAR------ */

.navigation{
    z-index: 100!important;
    background: transparent;
    padding: 0!important;
    width: 100%;
}

.nav-container{
    padding:0!important;
    height: 120px;
}
.navbar-brand{
    z-index: 100!important;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar-brand span{
    font-size: 1.3rem;
}
.logo{
    height : 60px; 
}
.navbar-brand span{
    padding-left: 5px;
    font-size: 1.5rem;
    font-weight: 800;
    color: #011f53;
}

.navigate{
    color: black!important;
    font-size: 0.9rem;
    font-weight: 500;
    padding-left: 20px!important;
    padding-right: 20px!important;
    text-align: center;
}
.navigate:hover{
    color: #8cb654!important;
}
.reg-button{
    border: none;
    padding: 10px 30px 10px 30px;
    background: #8cb654;
    color: white;
    text-transform: uppercase;
    font-weight: 500;
    border-radius: 3px;
    margin-left: 60px;
}

/* ----------CAROUSEL----------- */
.carousel-item{
    position: relative;
}
.carousel-control-prev{
    width: 8%;
    left: -28px;
    opacity: 1;
}
.carousel-control-next{
    width: 8%;
    right: -28px;
    opacity: 1;
}
.carousel-control-next-icon,
.carousel-control-prev-icon {
  background: white;
  width: 80px;
  height: 60px;
  color: black;
  text-transform: uppercase;
  text-align: center;
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.carousel-content{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
}
.carousel-content .container{
    
    align-items: center;
    position: relative;
}

.line1{
    display: block;
    width:300px;
    height: 10px;
    background: white;
}


.line2{
    display: inline-block;
    width: 10px;
    height: 300px;
    background: white;
}

.box-content{
    position: absolute;
    top: 20px;
    left: 20px;
    display: inline-block;
}

.box-content h1{
    padding-left: 40px;
    padding-top: 20px;
    font-size: 4rem;
    text-transform: uppercase;
    color: white;
    font-weight: 500;
}

.box-content p{
    color: white;
    margin-top: 20px;
    margin-bottom: 0;
    padding-left: 40px;
    font-size: 1.5rem;
    font-weight: lighter;
}



.line3{
    display: inline-block;
    width: 150px;
    height: 10px;
    background: white;
    margin: 0!important;
    position: relative;
}

.line3::before{
    content: "";
    width: 150px;
    height: 10px;
    position:absolute;
    top: 0;
    left: -10px;
    background: white;
    z-index: 3;


}

.learn-button{
    display: inline-block!important;
    border: none;
    padding: 10px 30px 10px 30px;
    background: #8cb654;
    color: white;
    text-transform: uppercase;
    font-weight: 500;
    border-radius: 3px;
    margin-left: 20px;

}
.carousel-icon{
    display: inline-block!important;
    position: absolute;
    bottom: 0;
    margin-left: 20px;
    color: white;
}
.carousel-icon i{
    padding-left: 15px;
    padding-right: 15px;
}


/* -------------SECOND SECTION------------ */
.second-section{
    height: 650px;
}
.second-heading{
    padding-top: 80px;
    padding-bottom: 30px;
}
.second-heading h1{
    color: #011f58;
    font-weight: 700;
}
.underline{
    width: 150px;
    height: 1px;
    background: #8cb654;
    position: relative;
}
.underline::before{
    content: "";
    position: absolute;
    top: -0.25px;
    left: 0;
    width: 60px;
    height: 1.5px;
    background: #001e57;
}
.table-of-3{
    margin-top: 70px;
}
.table-of-3 .container{
    position: relative;
}
.table-of-3 .container .shifting-table{
    box-shadow: 0 0 30px lightgrey;
    background: white;
    position: absolute;
    width: 120%;
    z-index: 3;
    top: 0;
    left: 0;

}
.shifting-table .row .col-lg{
    text-align: center;
    padding: 10px 30px 10px 30px;
    transition: 0.3s;
}

.shifting-table .row .col-lg:hover{
    background: #8cb654;
    color: white;
}
.shifting-table .row .col-lg:hover h1{
    color: white;
}

.shifting-table .row .col-lg h1{
    transition: 0.3s;
    color: #8cb654;
    font-weight: lighter;
}


.shifting-table .row .col-lg p{
    font-weight: 500;
}

.middle-col{
    border-left: 1px solid lightgrey;
    border-right: 1px solid lightgrey;
}

.image-container{
    position: relative;
}

.images-to-display{
    position: absolute;
    top: -35px;
    left: 0;
}

.images-to-display img{
    width: 100%;
    padding: 15px;
}
/* -------THIRD SECTION-------- */
.third-section{
    padding: 70px 0 70px 0;
}
.third-heading{
    padding-top: 30px;
    padding-bottom: 30px;
    text-transform: uppercase;
}
.third-heading h1{
    color: #011f58;
    font-weight: 700;
}
/* ... */

